# boiler-plate

./: .pylintrc  README.md  setup.cfg  setup.py
data/: SETUP  SETUP_CFG
src/boilerplate/: __init__.py  boilerplate.py  cli.py  constants.py  file_content.py  helper.py  messages.py  requirements.py  setup.py
test/: test_cli.py
