[metadata]
name = boilerplate
version = 1.0
author = Adarsh Battu
author_email = adarsh.battu109@gmail.com
url = 
description = Utility to setup a fresh project with all necessary packages and virtual Environment
long_description = file: README.md
long_description_content_type = text/markdown
keywords = boilerplate, setuptools
#license = BSD 3-Clause License
classifiers =
	Framework :: Custom
    #License :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.9
package_dir=
    =src
packages=find:
zip_safe = True
include_package_data = False
install_requires =
    virtualenv

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    boilerplate = boilerplate:main

[options.extras_require]
dev = 
    black
    flake8
	pylint
	virtualenv
test = 
	pytest
	mypy
	flake8
	coverage
	pytest-cov
	pylint
	black

[flake8]
exclude = .tox,*.egg,build,__pycache__,htmlcov,venv
select = E,W,F
ignore = E501
show_source = True
statistics = True

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -v --cov=boilerplate --cov-report=html
filterwarnings = ignore::DeprecationWarning

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md